Labels with distance positioner for edges